--- a/style.css
+++ b/style.css
@@ -24,11 +24,19 @@ body {
 h1 {
   margin: 0;
   font-size: 4em;
-  font-weight: 100;
+  font-weight: bold;
+  font-family: Rubik;
+}
+
+h2 {
+  margin: 0;
+  font-size: 2em;
+  font-weight: normal;
 }
 
 p {
   width: 95%;
+  color: #f5f3f2;
   font-size: 1.5em;
   line-height: 1.4;
 }
